--- a/GameData/SpaceY/SpaceYCorp/Agencies/Agents.cfg
+++ b/GameData/SpaceY/SpaceYCorp/Agencies/Agents.cfg
@@ -1,21 +1,29 @@
 // Agents.cfg v1.0.0.0
-// Rusty Star Shipyards (RSS) 
-// created: 15 Aug 2022
-// updated: 
+// SpaceY Corp (SYC)
+// created: 05 Nov 2014
+// updated: 25 Aug 2022
 
-// this file: CC BY-ND 4.0 by zer0Kerbal
+// this file: CC BY-SA 4.0 by zer0Kerbal
 
 AGENT
 {
-  name = RustyStarRockets
-  title = #RSS-Agency-titl // Rusty Star Shipyards
-  description = #RSS-Agency-desc // .
+  name = SpaceYTechnologiesCorporation
+  title = #SYC-Agency-Title
+  description = #SYC-Agency-desc
   
-  logoURL = RustyStar/RustyStarShipyards/Flags/RSS
-  logoScaledURL = RustyStar/RustyStarShipyards/Agencies/RSR_scaled
+  logoURL = SpaceY/SpaceY Corp/Flags/SpaceY
+  logoScaledURL = SpaceY/SpaceY Corp/Agencies/SpaceY_scaled
   
-  // mentalities (easy-going, very cheap)
+  // Rockomax Conglomerate are competition
+  standing = Rockomax Conglomerate, 0.6
+  standing = Modular Rocket Systems, 0.6
+    
+  // mentalities
   mentality = Commercial
-  mentality = EasyGoing 0.1 
-  mentality = Economic 0.1
+  mentality = Industrial
+  mentality = Competitive
+  mentality = Conglomerate
+  mentality = Economic 0.9 
+  mentality = Moral 0.9
+  mentality = Patient 0.1
 }
