--- a/GameData/SpaceY/SpaceYCorp/Config/themes.cfg
+++ b/GameData/SpaceY/SpaceYCorp/Config/themes.cfg
@@ -1,5 +1,5 @@
-// Themes.cfg v2.0.0.0
-// SpaceY Lifters (SYL)
+// themes.cfg v2.0.0.0
+// SpaceY Corp (SYC)
 // created: 09 Dec 2022
 // updated: 
 
