--- a/GameData/SpaceY/SpaceYCorp/Localization/en-us.cfg
+++ b/GameData/SpaceY/SpaceYCorp/Localization/en-us.cfg
@@ -14,7 +14,7 @@ Localization
 	// SpaceY Corp (SYC)
 		#SYC-Agency-titl = SpaceY Technologies Corporation
 		#SYC-Agency-desc = Believing that "Y" is superior to "X" in most equations, the founder of SpaceY decided that this company's focus should be entirely on vertical heavy-lift vehicles. Space, why? Because it's there!
-		#SYC-Agency-tags = syc spacey
+		#SYC-Agency-tags = syc spyc spacey
 
 	// themes
 		#SYC-theme-00-name = Black
