--- a/GameData/SpaceY/SpaceYCorp/Agencies/Agents.cfg
+++ b/GameData/SpaceY/SpaceYCorp/Agencies/Agents.cfg
@@ -11,15 +11,15 @@ AGENT
   title = #SYC-Agency-Title
   description = #SYC-Agency-desc
   
-  logoURL = SpaceY/SpaceY Corp/Flags/SpaceY
-  logoScaledURL = SpaceY/SpaceY Corp/Agencies/SpaceY_scaled
+  logoURL = SpaceY/SpaceYCorp/Flags/SpaceY
+  logoScaledURL = SpaceY/SpaceYCorp/Agencies/SpaceY_scaled
   
   // Rockomax Conglomerate are competition
   standing = Rockomax Conglomerate, 0.6
   standing = Modular Rocket Systems, 0.6
     
   // mentalities
-  mentality = Commercial
+  // mentality = Commercial
   mentality = Industrial
   mentality = Competitive
   mentality = Conglomerate
