--- a/GameData/SpaceY/SpaceYCorp/Agencies/Agents.cfg
+++ b/GameData/SpaceY/SpaceYCorp/Agencies/Agents.cfg
@@ -1,27 +1,25 @@
-// Agents.cfg v1.0.0.0
+// Agents.cfg v1.0.1.0
 // SpaceY Corp (SYC)
 // created: 05 Nov 2014
-// updated: 25 Aug 2022
+// updated: 17 Jan 2023
 
 // this file: CC BY-SA 4.0 by zer0Kerbal
 
 AGENT
 {
   name = SpaceYTechnologiesCorporation
-  title = #SYC-Agency-Title
+  title = #SYC-Agency-titl
   description = #SYC-Agency-desc
+  DescriptionRich = #SYC-Agency-descR
   
-  logoURL = SpaceY/SpaceYCorp/Flags/SpaceY
+  logoURL = SpaceY/SpaceYCorp/Agencies/SpaceY
   logoScaledURL = SpaceY/SpaceYCorp/Agencies/SpaceY_scaled
   
   // Rockomax Conglomerate are competition
   standing = Rockomax Conglomerate, 0.6
   standing = Modular Rocket Systems, 0.6
-    
-  // mentalities
-  // mentality = Commercial
+
   mentality = Industrial
-  mentality = Competitive
   mentality = Conglomerate
   mentality = Economic 0.9 
   mentality = Moral 0.9
