--- a/GameData/SpaceY/SpaceYCorp/Localization/en-us.cfg
+++ b/GameData/SpaceY/SpaceYCorp/Localization/en-us.cfg
@@ -1,7 +1,7 @@
-// en-us.cfg v1.0.1.0
+// en-us.cfg v1.0.2.0
 // SpaceY Corp (SYC)
 // created: 25 Aug 2022
-// updated: 09 Dec 2022
+// updated: 17 Jan 2023
 
 // This file: CC BY-NC-SA 4.0
 // created by [zer0Kerbal](https://github.com/zer0Kerbal)
@@ -14,6 +14,7 @@ Localization
 	// SpaceY Corp (SYC)
 		#SYC-Agency-titl = SpaceY Technologies Corporation
 		#SYC-Agency-desc = Believing that "Y" is superior to "X" in most equations, the founder of SpaceY decided that this company's focus should be entirely on vertical heavy-lift vehicles. Space, why? Because it's there!
+		#SYC-Agency-descR = Believing that "Y" is superior to "X" in most equations, the founder of SpaceY decided that this company's focus should be entirely on vertical heavy-lift vehicles. Space, why? Because it's there!
 		#SYC-Agency-tags = syc spyc spacey
 
 	// themes
