--- a/GameData/SpaceY/SpaceYCorp/Localization/en-us.cfg
+++ b/GameData/SpaceY/SpaceYCorp/Localization/en-us.cfg
@@ -1,7 +1,7 @@
 // en-us.cfg v1.0.2.0
 // SpaceY Corp (SYC)
 // created: 25 Aug 2022
-// updated: 17 Jan 2023
+// updated: 18 Jan 2023
 
 // This file: CC BY-NC-SA 4.0
 // created by [zer0Kerbal](https://github.com/zer0Kerbal)
@@ -16,6 +16,19 @@ Localization
 		#SYC-Agency-desc = Believing that "Y" is superior to "X" in most equations, the founder of SpaceY decided that this company's focus should be entirely on vertical heavy-lift vehicles. Space, why? Because it's there!
 		#SYC-Agency-descR = Believing that "Y" is superior to "X" in most equations, the founder of SpaceY decided that this company's focus should be entirely on vertical heavy-lift vehicles. Space, why? Because it's there!
 		#SYC-Agency-tags = syc spyc spacey
+
+	// Actions
+		#SYC-MAG-labl-strt = Labels: Activate
+		#SYC-MAG-labl-stop = Labels: Deactivate
+		#SYC-MAG-labl-actn = Toggle Label Light
+
+		#SYC-MAG-SAS-strt = Light: Activate
+		#SYC-MAG-SAS-stop = Light: Deactivate
+		#SYC-MAG-SAS-actn = Toggle SAS Light
+
+		#SYC-DOCK-name = Undock: Top Node
+		#SYC-DOCK-enbl = Undock Staging: Enabled
+		#SYC-DOCK-dsbl = Undock Staging: Disabled
 
 	// themes
 		#SYC-theme-00-name = Black
