--- a/GameData/SpaceY/SpaceYCorp/Config/themes.cfg
+++ b/GameData/SpaceY/SpaceYCorp/Config/themes.cfg
@@ -3,7 +3,7 @@
 // created: 09 Dec 2022
 // updated: 
 
-// This file: CC BY-NC-SA 4.0 by zer0Kerbal
+// This file: CC BY-SA 4.0 by zer0Kerbal
 
 VARIANTTHEME
 {
