--- a/GameData/SpaceY/SpaceYCorp/Localization/en-us.cfg
+++ b/GameData/SpaceY/SpaceYCorp/Localization/en-us.cfg
@@ -3,7 +3,7 @@
 // created: 25 Aug 2022
 // updated: 18 Jan 2023
 
-// This file: CC BY-NC-SA 4.0
+// This file: CC BY-SA 4.0
 // created by [zer0Kerbal](https://github.com/zer0Kerbal)
 // translation courtesy of [zer0Kerbal](https://github.com/zer0Kerbal)
 
