--- a/GameData/SpaceY/SpaceYCorp/Localization/en-us.cfg
+++ b/GameData/SpaceY/SpaceYCorp/Localization/en-us.cfg
@@ -32,7 +32,7 @@ Localization
 
 	// themes
 		#SYC-theme-00-name = Black
-		#SYC-theme-00-desc = Black as the night.
+		#SYC-theme-00-desc = Black as the night
 
 		#SYC-theme-01-name = Default
 		#SYC-theme-01-desc = Default Appearance
