--- a/GameData/SpaceY/SpaceYCorp/Localization/en-us.cfg
+++ b/GameData/SpaceY/SpaceYCorp/Localization/en-us.cfg
@@ -1,7 +1,7 @@
-// en-us.cfg v1.0.2.0
+// en-us.cfg v1.0.3.0
 // SpaceY Corp (SYC)
 // created: 25 Aug 2022
-// updated: 18 Jan 2023
+// updated: 09 Jan 2023
 
 // This file: CC BY-SA 4.0
 // created by [zer0Kerbal](https://github.com/zer0Kerbal)
@@ -16,6 +16,15 @@ Localization
 		#SYC-Agency-desc = Believing that "Y" is superior to "X" in most equations, the founder of SpaceY decided that this company's focus should be entirely on vertical heavy-lift vehicles. Space, why? Because it's there!
 		#SYC-Agency-descR = Believing that "Y" is superior to "X" in most equations, the founder of SpaceY decided that this company's focus should be entirely on vertical heavy-lift vehicles. Space, why? Because it's there!
 		#SYC-Agency-tags = syc spyc spacey
+ 
+	// tags
+		#SYC-eng-tags = ascent launch main propuls rocket
+		#SYC-srb-tags = moar (more motor rocket srb solid boost
+		#SYC-srbc-tags = moar (more motor rocket srb solid boost separat stag detach nose cone cap aero
+
+	// DefaultActionsGroups
+		#SYC-MDAG-SAS-name = Toggle SAS Light
+		#SYC-MDAG-Gear-name = Toggle Landing Leg
 
 	// Actions
 		#SYC-MAG-labl-strt = Labels: Activate
@@ -29,6 +38,10 @@ Localization
 		#SYC-DOCK-name = Undock: Top Node
 		#SYC-DOCK-enbl = Undock Staging: Enabled
 		#SYC-DOCK-dsbl = Undock Staging: Disabled
+
+		#SYC-LEG-enbl = Extend Legs
+		#SYC-LEG-dsbl = Retract Legs
+		#SYC-LEG-name = Toggle Legs
 
 	// themes
 		#SYC-theme-00-name = Black
