--- a/GameData/SpaceY/SpaceYCorp/Localization/en-us.cfg
+++ b/GameData/SpaceY/SpaceYCorp/Localization/en-us.cfg
@@ -1,11 +1,12 @@
 // en-us.cfg v1.0.3.0
 // SpaceY Corp (SYC)
 // created: 25 Aug 2022
-// updated: 09 Jan 2023
+// updated: 09 May 2023
 
-// This file: CC BY-SA 4.0
-// created by [zer0Kerbal](https://github.com/zer0Kerbal)
-// translation courtesy of [zer0Kerbal](https://github.com/zer0Kerbal)
+// This file:
+//   CC BY-SA 4.0
+//   created by [zer0Kerbal](https://github.com/zer0Kerbal)
+//   translation courtesy of [zer0Kerbal](https://github.com/zer0Kerbal)
 
 Localization
 {
