--- a/GameData/SpaceY/SpaceYCorp/Config/SpaceYCorp.cfg
+++ b/GameData/SpaceY/SpaceYCorp/Config/SpaceYCorp.cfg
@@ -1,14 +1,18 @@
-// SpaceYCorp.cfg v1.0.0.0
+// SpaceYCorp.cfg v1.0.1.0
 // SpaceY Corp (SYC)
-// created: 09 Dec 2022
-// updated: 
+// created: 25 Aug 2022
+// updated: 11 May 2023
+//
+// TEMPLATE: ModTags.md v1.1.1.0
+// created: 04 Oct 2022
+// updated: 16 Apr 2023
 
-// this file: CC BY-ND 4.0 by zer0Kerbal
+// THIS FILE: CC BY-ND 4.0 by zer0Kerbal
 
 // updates parts with localization strings
-
 @PART[syc-*,syl-*,sye-*]:NEEDS[SpaceY/SpaceYCorp]:FOR[SpaceYCorp]
 {
+	&tags = missing // catch any parts missing tags
 	tmp01 = #SYC-tags
 	@tags = #$tags$ $tmp01$
 	!tmp01 = DELETE
