--- a/GameData/SpaceY/SpaceYCorp/Localization/en-us.cfg
+++ b/GameData/SpaceY/SpaceYCorp/Localization/en-us.cfg
@@ -1,7 +1,7 @@
-// en-us.cfg v1.0.3.0
+// en-us.cfg v1.0.4.0
 // SpaceY Corp (SYC)
 // created: 25 Aug 2022
-// updated: 09 May 2023
+// updated: 12 May 2023
 
 // This file:
 //   CC BY-SA 4.0
@@ -22,6 +22,12 @@ Localization
 		#SYC-eng-tags = ascent launch main propuls rocket
 		#SYC-srb-tags = moar (more motor rocket srb solid boost
 		#SYC-srbc-tags = moar (more motor rocket srb solid boost separat stag detach nose cone cap aero
+
+		#SYC-eng-kiwi = )kiwi
+		#SYC-eng-moa = )moa
+		#SYC-emu-tags = )emu
+		#SYC-penguin-tags = )penguin
+		#SYC-ratite-tags = )ratite
 
 	// DefaultActionsGroups
 		#SYC-MDAG-SAS-name = Toggle SAS Light
