--- a/GameData/SpaceY/SpaceYCorp/Localization/en-us.cfg
+++ b/GameData/SpaceY/SpaceYCorp/Localization/en-us.cfg
@@ -23,9 +23,9 @@ Localization
 		#SYC-srb-tags = moar (more motor rocket srb solid boost
 		#SYC-srbc-tags = moar (more motor rocket srb solid boost separat stag detach nose cone cap aero
 
-		#SYC-eng-kiwi = )kiwi
-		#SYC-eng-moa = )moa
 		#SYC-emu-tags = )emu
+		#SYC-kiwi-tags = )kiwi
+		#SYC-moa-tags = )moa
 		#SYC-penguin-tags = )penguin
 		#SYC-ratite-tags = )ratite
 
