--- a/GameData/SpaceY/SpaceYCorp/Localization/en-us.cfg
+++ b/GameData/SpaceY/SpaceYCorp/Localization/en-us.cfg
@@ -18,7 +18,7 @@ Localization
 		#SYC-Agency-descR = Believing that "Y" is superior to "X" in most equations, the founder of SpaceY decided that this company's focus should be entirely on vertical heavy-lift vehicles. Space, why? Because it's there!
 		#SYC-Agency-tags = syc spyc spacey
  
-	// tags
+	// part name tags
 		#SYC-eng-tags = ascent launch main propuls rocket
 		#SYC-srb-tags = moar (more motor rocket srb solid boost
 		#SYC-srbc-tags = moar (more motor rocket srb solid boost separat stag detach nose cone cap aero
@@ -28,6 +28,14 @@ Localization
 		#SYC-moa-tags = )moa
 		#SYC-penguin-tags = )penguin
 		#SYC-ratite-tags = )ratite
+
+	// size specific
+		#SYC-125-tags = (1 1m
+		#SYC-250-tags = (2 2m
+		#SYC-375-tags = (3 3m
+		#SYC-500-tags = (5 5m
+		#SYC-750-tags = (7 7m
+		#SYC-1000-tags = (10 10m 
 
 	// DefaultActionsGroups
 		#SYC-MDAG-SAS-name = Toggle SAS Light
