--- a/GameData/SpaceY/SpaceYCorp/Localization/en-us.cfg
+++ b/GameData/SpaceY/SpaceYCorp/Localization/en-us.cfg
@@ -17,6 +17,23 @@ Localization
 		#SYC-Agency-desc = Believing that "Y" is superior to "X" in most equations, the founder of SpaceY decided that this company's focus should be entirely on vertical heavy-lift vehicles. Space, why? Because it's there!
 		#SYC-Agency-descR = Believing that "Y" is superior to "X" in most equations, the founder of SpaceY decided that this company's focus should be entirely on vertical heavy-lift vehicles. Space, why? Because it's there!
 		#SYC-Agency-tags = syc spyc spacey
+
+	// Connected Living Space
+		#SYC-cls-desc =  It is passable using CLS.
+
+	// fuel switchers
+		// InterstellarFuelSwitch
+		#SYC-IFS-info = Interstellar Fuel Switch.
+
+		// Firespitter FuelSwitch
+		#SYC-FS-info = Firespitter Fuel Switch.
+
+		// B9partswitch
+		#SYC-B9-info = B9 Fuel Switch.
+		#SYC-B9-desc = Fuel Type
+
+		// Modular Fuel Tanks
+		#SYC-MFT-desc = MFT Fuel Switch.
  
 	// part name tags
 		#SYC-eng-tags = ascent launch main propuls rocket
