--- a/GameData/SpaceY/SpaceYCorp/Localization/en-us.cfg
+++ b/GameData/SpaceY/SpaceYCorp/Localization/en-us.cfg
@@ -3,10 +3,10 @@
 // created: 25 Aug 2022
 // updated: 12 May 2023
 
-// This file:
-//   CC BY-SA 4.0
-//   created by [zer0Kerbal](https://github.com/zer0Kerbal)
-//   translation courtesy of [zer0Kerbal](https://github.com/zer0Kerbal)
+// THIS FILE:
+//   CC BY-SA 4.0 by zer0Kerbal
+//   created by: [zer0Kerbal](https://github.com/zer0Kerbal)
+//   translation by: [zer0Kerbal](https://github.com/zer0Kerbal)
 
 Localization
 {
