--- a/GameData/SpaceY/SpaceYCorp/Localization/ru.cfg
+++ b/GameData/SpaceY/SpaceYCorp/Localization/ru.cfg
@@ -1,7 +1,7 @@
-// ru.cfg v1.0.3.0
+// ru.cfg v1.0.0.0
 // SpaceY Corp (SYC)
-// created: 25 Aug 2022
-// updated: 09 May 2023
+// created: 05 Jun 2023
+// updated: 
 
 // This file:
 //   CC BY-SA 4.0
