--- a/GameData/SpaceY/SpaceYCorp/Config/SpaceYCorp.cfg
+++ b/GameData/SpaceY/SpaceYCorp/Config/SpaceYCorp.cfg
@@ -1,7 +1,7 @@
-// SpaceYCorp.cfg v1.0.1.0
+// SpaceYCorp.cfg v1.0.2.0
 // SpaceY Corp (SYC)
 // created: 25 Aug 2022
-// updated: 11 May 2023
+// updated: 26 Jun 2023
 //
 // TEMPLATE: ModTags.md v1.1.1.0
 // created: 04 Oct 2022
@@ -10,7 +10,7 @@
 // THIS FILE: CC BY-ND 4.0 by zer0Kerbal
 
 // updates parts with localization strings
-@PART[syc-*,syl-*,sye-*]:NEEDS[SpaceY/SpaceYCorp]:FOR[SpaceYCorp]
+@PART[syc-*,syl-*,syx-*]:NEEDS[SpaceY/SpaceYCorp]:FOR[SpaceYCorp]
 {
 	&tags = missing // catch any parts missing tags
 	tmp01 = #SYC-tags
