--- a/GameData/SpaceY/SpaceYCorp/Localization/ru.cfg
+++ b/GameData/SpaceY/SpaceYCorp/Localization/ru.cfg
@@ -1,12 +1,12 @@
-// ru.cfg v1.0.0.0
+// ru.cfg v1.0.1.0
 // SpaceY Corp (SYC)
 // created: 05 Jun 2023
-// updated: 
+// updated: 26 Jun 2023
 
 // This file:
-//   CC BY-SA 4.0
-//   created by [zer0Kerbal](https://github.com/zer0Kerbal)
-//   translation by [evanisrael](https://github.com/evanisrael)
+//   CC BY-SA 4.0 by evenisrael and zer0Kerbal
+//   created by: [zer0Kerbal](https://github.com/zer0Kerbal)
+//   translated: [evanisrael](https://github.com/evanisrael)
 
 Localization
 {
@@ -17,7 +17,7 @@ Localization
 		#SYC-Agency-desc =  Веря, что "Y" превосходит "X" в большинстве уравнений, основатель SpaceY решил, что основной акцент компании должен быть сделан на вертикальных тяжеловесных ракетах. Почему такое название? А почему бы и нет!
 		#SYC-Agency-descR = Веря, что "Y" превосходит "X" в большинстве уравнений, основатель SpaceY решил, что основной акцент компании должен быть сделан на вертикальных тяжеловесных ракетах. Почему такое название? А почему бы и нет!
 		#SYC-Agency-tags = syc spyc spacey
- 
+
 	// tags
 		#SYC-eng-tags = подъем запуск главный двигатель ракета
 		#SYC-srb-tags = moar (больше двигатель ракета srb твердотопливный ускорение
@@ -33,19 +33,19 @@ Localization
 		#SYC-MAG-labl-actn = Включить/выключить подсветку подписей
 
 		#SYC-MAG-SAS-strt = Индикатор: Включить
-	  #SYC-MAG-SAS-stop = Индикатор: Выключить
-	  #SYC-MAG-SAS-actn = Включить/выключить индикатор SAS
+		#SYC-MAG-SAS-stop = Индикатор: Выключить
+		#SYC-MAG-SAS-actn = Включить/выключить индикатор SAS
 
 		#SYC-DOCK-name = Отсоединить: Верхний узел
-	  #SYC-DOCK-enbl = Отсоединение: Включено
-	  #SYC-DOCK-dsbl = Отсоединение: Выключено
+		#SYC-DOCK-enbl = Отсоединение: Включено
+		#SYC-DOCK-dsbl = Отсоединение: Выключено
 
 		#SYC-LEG-enbl = Выдвинуть шасси
-	  #SYC-LEG-dsbl = Задвинуть шасси
-	  #SYC-LEG-name = Выдвинуть/Задвинуть шасси
+		#SYC-LEG-dsbl = Задвинуть шасси
+		#SYC-LEG-name = Выдвинуть/Задвинуть шасси
 
 	// themes
-		#SYC-theme-00-name = Черная
+	#SYC-theme-00-name = Черная
     #SYC-theme-00-desc = Черная, как ночь
 
     #SYC-theme-01-name = По умолчанию
